--- a/src/app/components/simuladores/doctorpeso/simulador-doctorpeso.component.html
+++ b/src/app/components/simuladores/doctorpeso/simulador-doctorpeso.component.html
@@ -38,7 +38,9 @@
   </div>
 
   <!-- Botón de solicitud -->
-  <button class="solicitar-btn">Solicita tu crédito</button>
+  <a class="solicitar-btn" href="https://doctorpeso.co/" target="_blank">
+  Solicita tu crédito
+  </a>
 
   <!-- Detalles -->
   <div class="detalles">
