--- a/src/app/components/simuladores/prestaenlinea/simulador-prestaenlinea.component.html
+++ b/src/app/components/simuladores/prestaenlinea/simulador-prestaenlinea.component.html
@@ -88,7 +88,10 @@
         <span class="discount-label">Código descuento</span>
         <input type="text" class="discount-input" placeholder="Valider">
       </div>
-      <button class="cta-button">¡SOLICITA YA!</button>
+  <a class="cta-button" href="https://www.prestaenlinea.com.co/" target="_blank">
+    ¡SOLICITA YA!
+  </a>
+
     </div>
   </div>
   
