--- a/src/app/components/simuladores/wasticredit/simulador-wasticredit.component.html
+++ b/src/app/components/simuladores/wasticredit/simulador-wasticredit.component.html
@@ -1,5 +1,5 @@
 <div class="simulador-container">
-  <h2>OBTÉN UN 50% DE DESCUENTO EN TU PRIMER PRESTAMO</h2>
+  <h2>OBTÉN UN 50% DE DESCUENTO EN TU PRIMER PRÉSTAMO</h2>
 
   <div class="modo-pago">
     <button class="activo">Pago Único</button>
@@ -35,4 +35,8 @@
 
     <p><strong>Total a Pagar: {{ totalPagar | currency:'COP' }}</strong></p>
   </div>
+
+  <a class="solicitar-btn" href="https://wasticredit.co/" target="_blank">
+    Solicítalo ahora
+  </a>
 </div>
