--- a/src/app/components/simuladores/yadinero/simulador-yadinero.component.html
+++ b/src/app/components/simuladores/yadinero/simulador-yadinero.component.html
@@ -93,5 +93,7 @@
     </small>
   </div>
 
-  <button class="btn-solicitud">¡Enviar solicitud de crédito!</button>
+  <a class="btn-solicitud" href="https://yadinero.co/" target="_blank">
+  ¡Enviar solicitud de crédito!
+  </a>
 </div>
