--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg fixed-top navbar-light" style="background-color: #93eb9f;">
+<nav class="navbar navbar-expand-lg sticky-top navbar-light" style="background-color: #93eb9f;">
   <div class="container">
     <a class="navbar-brand" routerLink="/">
       <span class="logo-text">Incredicol</span>
